--- a/net.sourceforge.eclipsetrader.directaworld/build.properties
+++ b/net.sourceforge.eclipsetrader.directaworld/build.properties
@@ -2,4 +2,5 @@ source.directaworld.jar = src/
 output.directaworld.jar = bin/
 bin.includes = plugin.xml,\
                directaworld.jar,\
-               icons/
+               icons/,\
+               cpl-v10.html
