Added confirmation on program exit
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@19 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader/plugin.xml
+++ b/net.sourceforge.eclipsetrader/plugin.xml
@@ -74,6 +74,11 @@
             class="net.sourceforge.eclipsetrader.preferences.GeneralPreferencePage"
             name="Eclipse Trader"
             id="eclipsetrader"/>
+      <page
+            class="net.sourceforge.eclipsetrader.preferences.StartupPreferencePage"
+            name="Startup and Shutdown"
+            category="eclipsetrader"
+            id="eclipsetrader.startup"/>
    </extension>
    <extension
          point="org.eclipse.ui.actionSets">
