Added Accumulation/Distribution indicator
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@38 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.ui.views/plugin.xml
+++ b/net.sourceforge.eclipsetrader.ui.views/plugin.xml
@@ -293,6 +293,10 @@
    <extension
          point="net.sourceforge.eclipsetrader.chartPlotter">
       <plotter
+            label="Accumulation/Distribution"
+            class="net.sourceforge.eclipsetrader.ui.views.charts.AccumulationDistributionChart"
+            id="net.sourceforge.eclipsetrader.charts.accumulationDistribution"/>
+      <plotter
             label="Bollinger Bands"
             class="net.sourceforge.eclipsetrader.ui.views.charts.BollingerBandsChart"
             id="net.sourceforge.eclipsetrader.charts.bollinger"/>
