*** empty log message ***
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@44 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.ui.views/build.properties
+++ b/net.sourceforge.eclipsetrader.ui.views/build.properties
@@ -5,4 +5,6 @@ bin.includes = plugin.xml,\
                icons/,\
                license.txt,\
                stocklist.xml,\
-               cpl-v10.html
+               cpl-v10.html,\
+               plugin.properties,\
+               plugin_it.properties
