--- a/net.sourceforge.eclipsetrader.ui.views/build.properties
+++ b/net.sourceforge.eclipsetrader.ui.views/build.properties
@@ -7,4 +7,5 @@ bin.includes = plugin.xml,\
                stocklist.xml,\
                cpl-v10.html,\
                plugin.properties,\
-               plugin_it.properties
+               plugin_it.properties,\
+               stocklist_us.xml
