--- a/net.sourceforge.eclipsetrader/plugin.xml
+++ b/net.sourceforge.eclipsetrader/plugin.xml
@@ -3,7 +3,7 @@
 <plugin
    id="net.sourceforge.eclipsetrader"
    name="%pluginName"
-   version="0.8.0"
+   version="0.9.0"
    provider-name="%providerName"
    class="net.sourceforge.eclipsetrader.TraderPlugin">
 
@@ -24,6 +24,7 @@
    <extension-point id="dataProvider" name="Data Provider" schema="schema/dataProvider.exsd"/>
    <extension-point id="tradingProvider" name="Trading Provider" schema="schema/tradingProvider.exsd"/>
    <extension-point id="newsProvider" name="News Provider" schema="schema/newsProvider.exsd"/>
+   <extension-point id="bookDataProvider" name="Book Data Provider" schema="schema/bookDataProvider.exsd"/>
    <extension
          id="Product"
          point="org.eclipse.core.runtime.products">
