Added timing preferences
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@89 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader/plugin.xml
+++ b/net.sourceforge.eclipsetrader/plugin.xml
@@ -86,6 +86,11 @@
             name="Proxies"
             category="eclipsetrader"
             id="eclipsetrader.proxy"/>
+      <page
+            class="net.sourceforge.eclipsetrader.preferences.TimingPreferencePage"
+            name="Timing"
+            category="eclipsetrader"
+            id="eclipsetrader.timing"/>
    </extension>
    <extension
          point="org.eclipse.ui.actionSets">
