Added realtime chart backfill action
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@93 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.ui.views/plugin.xml
+++ b/net.sourceforge.eclipsetrader.ui.views/plugin.xml
@@ -301,6 +301,18 @@
                id="view.all"/>
       </viewContribution>
       <viewContribution
+            targetID="net.sourceforge.eclipsetrader.ui.views.RealtimeChart"
+            id="net.sourceforge.eclipsetrader.realtimeChartActions">
+         <action
+               toolbarPath="additions"
+               label="Backfill"
+               tooltip="Backfill"
+               icon="icons/refresh.gif"
+               class="net.sourceforge.eclipsetrader.ui.views.charts.RealtimeChartActions"
+               style="push"
+               id="chart.refresh"/>
+      </viewContribution>
+      <viewContribution
             targetID="net.sourceforge.eclipsetrader.ui.views.NewsBrowser"
             id="net.sourceforge.eclipsetrader.browserActions">
          <action
