--- a/net.sourceforge.eclipsetrader.directaworld/plugin.xml
+++ b/net.sourceforge.eclipsetrader.directaworld/plugin.xml
@@ -2,7 +2,7 @@
 <?eclipse version="3.0"?>
 <plugin
    id="net.sourceforge.eclipsetrader.directaworld"
-   name="Directa World"
+   name="DirectaWorld Italy"
    version="0.9.0"
    provider-name="Sourceforge.net"
    class="net.sourceforge.eclipsetrader.directaworld.DirectaWorldPlugin">
