--- a/net.sourceforge.eclipsetrader.yahoo/plugin.xml
+++ b/net.sourceforge.eclipsetrader.yahoo/plugin.xml
@@ -2,7 +2,7 @@
 <?eclipse version="3.0"?>
 <plugin
    id="net.sourceforge.eclipsetrader.yahoo"
-   name="Yahoo Plug-in"
+   name="Yahoo Finance"
    version="0.9.0"
    provider-name="Sourceforge.net"
    class="net.sourceforge.eclipsetrader.yahoo.YahooPlugin">
