--- a/net.sourceforge.eclipsetrader/build.properties
+++ b/net.sourceforge.eclipsetrader/build.properties
@@ -11,4 +11,5 @@ bin.includes = plugin.xml,\
                plugin.properties,\
                cpl-v10.html,\
                schema/,\
-               icons/
+               icons/,\
+               about.ini
