--- a/net.sourceforge.eclipsetrader.directaworld/build.properties
+++ b/net.sourceforge.eclipsetrader.directaworld/build.properties
@@ -3,4 +3,5 @@ output.directaworld.jar = bin/
 bin.includes = plugin.xml,\
                directaworld.jar,\
                icons/,\
-               cpl-v10.html
+               cpl-v10.html,\
+               about.ini
