--- a/net.sourceforge.eclipsetrader.yahoo/build.properties
+++ b/net.sourceforge.eclipsetrader.yahoo/build.properties
@@ -5,4 +5,5 @@ bin.includes = plugin.xml,\
                yahoo.xml,\
                license.txt,\
                mapping.xml,\
-               cpl-v10.html
+               cpl-v10.html,\
+               about.ini
