--- a/net.sourceforge.eclipsetrader/plugin.properties
+++ b/net.sourceforge.eclipsetrader/plugin.properties
@@ -1,15 +1,15 @@
 pluginName=Eclipse Trader
 providerName=Sourceforge.net
-
 productName=Eclipse Trader
+
 productBlurb=Eclipse Trader\n\
 \n\
-Version: 0.8.0\n\
-Build id: {0}\n\
+Version: {0} - from plugin\n\
+Build id: {1}\n\
 \n\
-(c) Copyright Eclipse Trader contributors and others 2004.  All rights reserved.\n\
-Visit http://eclipsetrader.sourceforge.net\n\
-\n\
-This product includes software developed by the\n\
-Apache Software Foundation http://www.apache.org/
+{2}
 
+UpdateActionSet.label = Software Updates
+UpdateActionSet.menu.label = &Software Updates
+UpdateActionSet.updates.label = &Find and Install...
+UpdateActionSet.configManager.label = &Manage Configuration...
