Added trend chart
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@107 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.ui.views/plugin.xml
+++ b/net.sourceforge.eclipsetrader.ui.views/plugin.xml
@@ -395,6 +395,10 @@
             label="Stochastic Oscillator"
             class="net.sourceforge.eclipsetrader.ui.views.charts.StochasticChart"
             id="net.sourceforge.eclipsetrader.charts.stochastic"/>
+      <plotter
+            label="Trend"
+            class="net.sourceforge.eclipsetrader.ui.views.charts.TrendChart"
+            id="net.sourceforge.eclipsetrader.charts.trend"/>
    </extension>
    <extension
          point="org.eclipse.ui.actionSets">
