*** empty log message ***
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@111 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader/plugin.properties
+++ b/net.sourceforge.eclipsetrader/plugin.properties
@@ -4,7 +4,7 @@ productName=Eclipse Trader
 
 productBlurb=Eclipse Trader\n\
 \n\
-Version: {0} - from plugin\n\
+Version: {0}\n\
 Build id: {1}\n\
 \n\
 {2}
