--- a/net.sourceforge.eclipsetrader/build.properties
+++ b/net.sourceforge.eclipsetrader/build.properties
@@ -12,4 +12,5 @@ bin.includes = plugin.xml,\
                cpl-v10.html,\
                schema/,\
                icons/,\
-               about.ini
+               about.ini,\
+               about.properties
